--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,13 @@
 ---
 # defaults file for beats
 
-beats_version: 7.0.0
+beats_version: 7.9.0
 version_lock: false
 use_repository: true
 start_service: true
 restart_on_change: true
+use_spool_file: false
+path_to_spool_file: "{{ beat_conf.queue.spool.file.path }}"
 daemon_args: ""
 logging_conf:
   files:
