--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -2,4 +2,5 @@
 
 default_file: "/etc/default"
 init_script: "/etc/init.d"
-repo_url: "https://artifacts.elastic.co/packages/{{ beats_major_version }}/apt"
+repo_url: "https://artifacts.elastic.co/packages/{{ beats_beats_version.split('.')[0] | lower }}.x/apt"
+repo_key: https://packages.elastic.co/GPG-KEY-elasticsearch
